# CPU-Raytracer

./: CLIHelper.cc  CLIHelper.h  CMakeLists.txt  README.md  ViewParameters.h  main.cpp
GFX/: Color.cc  Color.h  Material.cc  Material.h  PixelData.cc  PixelData.h  Point3D.cc  Point3D.h  Ray3D.cc  Ray3D.h  Vector3D.cc  Vector3D.h
GFX/Scene/: Camera.cc  Camera.h  Light.cc  Light.h  SceneObject.cc  SceneObject.h
GFX/Scene/Primitives/: Cylinder.cc  Cylinder.h  Primitive.cc  Primitive.h  Sphere.cc  Sphere.h  Triangle.cc  Triangle.h
io/: earth.ppm  test_art.ppm
io/input/: infile10.txt  infile11.txt  infile12.txt  infile13.txt  infile8.txt  infile9.txt
